# Dublin-AlienInvasion

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/CustomTrial/: CMakeLists.txt  Camera.h  Helper.cpp  Helper.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h  Shader.h  animation.h  animator.h  bone.h  helloworld.cpp  mesh.h  model.h  model_1.h  root_directory.h  shaderClass.h
resources/Objects/DublinCity/: City.mtl  DublinCityModel.mtl  DublinModel.mtl  ModelCity.mtl  model_flip.mtl
resources/Objects/DublinCity/Model textures/: model.mtl
resources/Objects/SF_Fighter/: SciFi_Fighter_lowScale.fbx
resources/Objects/backpack/: backpack.mtl
resources/Shaders/: fragmentShader.glsl
src/: main.cpp  model_loading.cpp
